# spam-filtering

./: README.md  pyproject.toml  requirement.txt  spam_classifier_model.joblib
models/: Email_spam_filtering_CNN_LTSM_agent.ipynb  Email_spam_filtering_Draft_1.ipynb  Email_spam_filtering_Draft_3_agent.ipynb  Email_spam_filtering_Draft_4_agent.ipynb  Email_spam_filtering_agent_cv_tfidf_LSTM_GLOVE_Final.ipynb  tfidf_sample.py
spam-classifier-agent/: README.md  ai_agent.py  predict_and_merge.py  preprocess.py  requirements.txt  train_model.py
spam-classifier-agent/data/: spam.csv
